--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
     "@better-auth/passkey": "^1.4.10",
     "@nuxt/ui": "^4.3.0",
     "better-auth": "^1.4.9",
+    "chart.js": "^4.5.1",
     "nuxt": "^4.2.2",
     "vue": "^3.5.26",
+    "vue-chartjs": "^5.3.3",
     "vue-router": "^4.6.4"
   },
-  "packageManager": "pnpm@10.26.0+sha512.3b3f6c725ebe712506c0ab1ad4133cf86b1f4b687effce62a9b38b4d72e3954242e643190fc51fa1642949c735f403debd44f5cb0edd657abe63a8b6a7e1e402",
+  "packageManager": "pnpm@10.27.0",
   "pnpm": {
     "overrides": {
       "@tiptap/core": "^3.14.0",
